Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3>
 <a id="self-resume" class="anchor" href="#self-resume" aria-hidden="true"><span class="octicon octicon-link"></span></a>Self Resume</h3>
 
-<p>name : YuXing Liu
+<p>name : YuXing Liu<br>
 mail : <a href="mailto:phpseasa@gmail.com">phpseasa@gmail.com</a>
 Education : 2009-2013 ShangHai MariTime University 
 Major : Electroic Business
@@ -55,8 +55,9 @@ CET-6</p>
 <h3>
 <a id="comminute" class="anchor" href="#comminute" aria-hidden="true"><span class="octicon octicon-link"></span></a>Comminute</h3>
 
-<p><a href="mailto:phpseasa@163.com">phpseasa@163.com</a>
-<a href="mailto:phpseasa@gmail.com">phpseasa@gmail.com</a></p>
+<p><a href="mailto:phpseasa@163.com">phpseasa@163.com</a></p>
+
+<p><a href="mailto:phpseasa@gmail.com">phpseasa@gmail.com</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/phpseasa/introduction.io">Introduction.io</a> is maintained by <a href="https://github.com/phpseasa">phpseasa</a>.</span>
