Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <a id="self-resume" class="anchor" href="#self-resume" aria-hidden="true"><span class="octicon octicon-link"></span></a>Self Resume</h3>
 
 <p>name : YuXing Liu<br>
-mail : <a href="mailto:phpseasa@gmail.com">phpseasa@gmail.com</a>
-Education : 2009-2013 ShangHai MariTime University 
-Major : Electroic Business
+mail : <a href="mailto:phpseasa@gmail.com">phpseasa@gmail.com</a><br>
+Education : 2009-2013 ShangHai MariTime University<br>
+Major : Electroic Business<br>
 Working Experience : 
 2013.3-2014.5 ShangHai NetPower Tech.Lo           Operation &amp; maintenance Engineer
 Our company is a hardware vendor , The ShangHai Stock Exchange (SSE) used our products, so i work with five other colleagues in SSE to support the project and maintenance the devices . 
