Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,31 +31,29 @@
 mail : <a href="mailto:phpseasa@gmail.com">phpseasa@gmail.com</a><br>
 Education : 2009-2013 ShangHai MariTime University<br>
 Major : Electroic Business<br>
-Working Experience : 
-2013.3-2014.5 ShangHai NetPower Tech.Lo           Operation &amp; maintenance Engineer
-Our company is a hardware vendor , The ShangHai Stock Exchange (SSE) used our products, so i work with five other colleagues in SSE to support the project and maintenance the devices . 
-Skills : tcl/tk Spawn/Expect Linux CentOS Bshell APACHE NGINX </p>
+Working Experience :<br>
+2013.3-2014.5 ShangHai NetPower Tech.Lo           Operation &amp; maintenance Engineer<br>
+Our company is a hardware vendor , The ShangHai Stock Exchange (SSE) used our products, so i work with five other colleagues in SSE to support the project and maintenance the devices .<br>
+Skills : tcl/tk Spawn/Expect Linux CentOS Bshell APACHE NGINX   </p>
 
-<p>2014-2015.7 BeiJing Trends Digital Lo.td            PHP Developer
-PHP develop engineer , as maintenance the web servers , Linux , Nginx , Mysql .</p>
+<p>2014-2015.7 BeiJing Trends Digital Lo.td            PHP Developer<br>
+PHP develop engineer , as maintenance the web servers , Linux , Nginx , Mysql .  </p>
 
-<p>2015.8 - now Beijing Mobimagic Tech.Lo.td             PHP developer in web Server
-in charge of the app distribution system &amp; operation system.</p>
+<p>2015.8 - now Beijing Mobimagic Tech.Lo.td             PHP developer in web Server<br>
+in charge of the app distribution system &amp; operation system.  </p>
 
 <h3>
 <a id="skills--features" class="anchor" href="#skills--features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Skills &amp; Features</h3>
 
-<p>my own MVC PHP frameworks 
-LAMP/LNMP 
-Javascript &amp; CSS
-TP / CI 
-my blog  <a href="http://www.cnblogs.com/liuyuxing">www.cnblogs.com/liuyuxing</a>
-CET-6</p>
+<p>my own MVC PHP frameworks<br>
+LAMP/LNMP<br>
+Javascript &amp; CSS<br>
+TP / CI<br>
+my blog  <a href="http://www.cnblogs.com/liuyuxing">www.cnblogs.com/liuyuxing</a><br>
+CET-6  </p>
 
 <h3>
 <a id="comminute" class="anchor" href="#comminute" aria-hidden="true"><span class="octicon octicon-link"></span></a>Comminute</h3>
-
-<p><a href="mailto:phpseasa@163.com">phpseasa@163.com</a></p>
 
 <p><a href="mailto:phpseasa@gmail.com">phpseasa@gmail.com</a></p>
 
